--- a/index.html
+++ b/index.html
@@ -42,12 +42,71 @@
         <h1>
 <a name="arduino-pi" class="anchor" href="#arduino-pi"><span class="octicon octicon-link"></span></a>Arduino Pi</h1>
 
-<p>Arduino Pi is an Arduino-based computer for developers. The computer is similar to a Raspberry Pi because the Arduino Pi is a single board computer also. The computer has 4 digital pins. The computer has an intepreter designed for Arduino known as Bitlash.</p>
+<h1></h1>
+
+<p>The Arduino Pi is a single board computer based on Arduino. The Arduino Pi has a six button keyboard known as GKOS, which is an chorded keyboard, and has an LED matrix based display. Right now, the LED matrix is a 5x5 LED matrix that scrolls. It has 4 digital pins for development using the Arduino platform. The scripting language is called Bitlash. I used Bitlash because it was easier to implement in the Arduino sketch than other programming languages.</p>
+
+<h2>
+<a name="gkos-keypad" class="anchor" href="#gkos-keypad"><span class="octicon octicon-link"></span></a>GKOS Keypad</h2>
+
+<p>With the 6 GKOS keys, directly connected to Arduino I/O pins, it is possible to type any text and enter most functions found on the PC keyboard (Alt, Ctrl, Tab...).</p>
+
+<h3>
+<a name="how-to-type" class="anchor" href="#how-to-type"><span class="octicon octicon-link"></span></a>How to type</h3>
+
+<p>GKOS Alphabet
+<img src="http://koti.mbnet.fi/gkos/gkoscom/g-buttons_letters_us2_p.jpg" alt="">
+The GKOS Alphabet.</p>
+
+<p>Letters G, K, O, S and W require two keys, and they also function as modifiers (shifts) changing the characters on other keys. For example, to press A, press the top left button. But to press H, press the top two buttons on the right ( the G key) and the top left button.</p>
+
+<p>Pressing all 6 keys down toggles between numbers and letters. You get backspace by pressing the 3 keys on the left, and space by pressing the 3 keys on the right. The full character set can be found here.</p>
+
+<h3>
+<a name="gkos-hardware" class="anchor" href="#gkos-hardware"><span class="octicon octicon-link"></span></a>GKOS Hardware</h3>
+
+<p><img src="http://koti.mbnet.fi/gkos/gkoscom/arduino/arduino_pads_01.png" alt="">
+Gkos keypad wiring</p>
+
+<p>In the Arduino Pi project, the analog pins are used.</p>
+
+<h2>
+<a name="led-matrix" class="anchor" href="#led-matrix"><span class="octicon octicon-link"></span></a>LED Matrix</h2>
+
+<p>The LED matrix is controlled using row-column scanning. </p>
+
+<p>LED displays are often packaged as matrixes of LEDs arranged in rows of common anodes and columns of common cathodes, or the reverse. Here's a typical example of an 8x8 matrix, and its schematic:</p>
+
+<p><img src="http://arduino.cc/en/uploads/Tutorial/LEDmatrix_img.jpg" alt=""><img src="http://arduino.cc/en/uploads/Tutorial/LEDmatrix_schem.png" alt=""></p>
+
+<p>These can be very useful displays. To control a matrix, you connect both its rows and columns to your microcontroller. The columns are connected to the LEDs cathodes (see Figure 1), so a column needs to be high for any of the LEDs in that column to turn on. The rows are connected to the LEDs anodes, so the row needs to be low for an individual LED to turn on. If the row and the column are both high or both low, no voltage flows through the LED and it doesn’t turn on.</p>
+
+<p>To control an individual LED, you set its column high and its row low. To control multiple LEDs in a row, you set the rows high, then take the column high, then set the lows row or high as appropriate; a low row will turn the corresponding LED on, and a high row will turn it off.</p>
+
+<p>I used the code from the below link and leveraged it for a 5x5 matrix:</p>
+
+<p><a href="http://blog.duklabs.com/?p=133">http://blog.duklabs.com/?p=133</a></p>
+
+<h2>
+<a name="bitlash" class="anchor" href="#bitlash"><span class="octicon octicon-link"></span></a>Bitlash</h2>
+
+<p>Bitlash is an open source interpreted language shell and embedded programming environment for Arduino. The Bitlash shell runs entirely on the Arduino and supports many of the familiar Arduino functions. Bitlash interprets commands you type on the serial port or send from your favorite PC-side programming environment. I have integrated Bitlash with the GKOS keypad so instead of using a serial port to enter commands, the GKOS keypad is used instead.</p>
+
+<p><img src="https://github.com/billroy/bitlash/wiki/architecture_of_bitlash_for_arduino.jpg" alt="">
+Bitlash Architecture</p>
+
+<p>Bitlash Wiki:</p>
+
+<p><a href="https://github.com/billroy/bitlash/wiki/docindex">https://github.com/billroy/bitlash/wiki/docindex</a></p>
+
+<p>Bitlash website:</p>
+
+<p><a href="https://www.bitlash.net">https://www.bitlash.net</a></p>
 
 <h1>
 <a name="repository" class="anchor" href="#repository"><span class="octicon octicon-link"></span></a>Repository</h1>
 
-<p>The repository includes the code, schematic, and PCB files (PCB coming soon). To view the files, go to github.com/iScienceLuvr/arduinopi or press the "View on Github" button. The entire project is under the Apache License. </p>
+<p>The repository includes the code, schematic, and PCB files. To view the files, go to github.com/iScienceLuvr/arduinopi or press the "View on Github" button or download the github repository by pressing the "TAR" or "ZIP" download buttons. The entire project is under the Apache License. </p>
 
 <h1>
 <a name="deployment" class="anchor" href="#deployment"><span class="octicon octicon-link"></span></a>Deployment</h1>
