Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -106,12 +106,19 @@ Bitlash Architecture</p>
 <h1>
 <a name="repository" class="anchor" href="#repository"><span class="octicon octicon-link"></span></a>Repository</h1>
 
+<h1></h1>
+
 <p>The repository includes the code, schematic, and PCB files. To view the files, go to github.com/iScienceLuvr/arduinopi or press the "View on Github" button or download the github repository by pressing the "TAR" or "ZIP" download buttons. The entire project is under the Apache License. </p>
 
 <h1>
 <a name="deployment" class="anchor" href="#deployment"><span class="octicon octicon-link"></span></a>Deployment</h1>
 
+<h1></h1>
+
 <p>To use the code posted in the repository, connect six buttons to the analog pins 0-5 and to the ground. Use a row-column scan LED Matrix (the code supports a 5x5 matrix) and connect them to digital pins 0-9. Refer to the schematic in the github repository</p>
+
+<h2>
+<a name="schematic" class="anchor" href="#schematic"><span class="octicon octicon-link"></span></a>Schematic</h2>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
