Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@ Bitlash Architecture</p>
 
 <h2>
 <a name="schematic" class="anchor" href="#schematic"><span class="octicon octicon-link"></span></a>Schematic</h2>
+
+<p><img src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" alt=""></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
