--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Arduino Uno. Since the Arduino Pi is in its early stages of development (as of J
 <h2>
 <a name="schematic" class="anchor" href="#schematic"><span class="octicon octicon-link"></span></a>Schematic</h2>
 
-<p><img src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" alt=""></p>
+<p><iframe width="725" height="448" src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
