--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Arduinopi by iScienceLuvr</title>
+    <title>Arduino Pi by iScienceLuvr</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,8 +17,8 @@
   <body>
 
       <header>
-        <h1>Arduinopi</h1>
-        <p>Arduino Pi repository</p>
+        <h1>Arduino Pi</h1>
+        <p>An Arduino-based computer designed for electronic developers and programmers</p>
       </header>
 
       <div id="banner">
@@ -133,7 +133,7 @@ Arduino Uno. Since the Arduino Pi is in its early stages of development (as of J
 <h2>
 <a name="schematic" class="anchor" href="#schematic"><span class="octicon octicon-link"></span></a>Schematic</h2>
 
-<p><iframe width="725" height="448" src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
+<p><iframe width="650" height="448" src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
