--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <header>
         <h1>Arduino Pi</h1>
         <p>An Arduino-based computer designed for electronic developers and programmers</p>
+        <image>src= "https://static.hackaday.io/images/5331751402362645333.png" </image>
       </header>
 
       <div id="banner">
