Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Arduino Pi by iScienceLuvr</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Arduinopi : Arduino Pi repository" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Arduinopi</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>Arduino Pi</h1>
-        <p>An Arduino-based computer designed for electronic developers and programmers</p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/iScienceLuvr/arduinopi">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">Arduinopi</h1>
+          <h2 id="project_tagline">Arduino Pi repository</h2>
 
-        <a href="https://github.com/iScienceLuvr/arduinopi" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/iScienceLuvr/arduinopi/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/iScienceLuvr/arduinopi/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/iScienceLuvr/arduinopi/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/iScienceLuvr/arduinopi/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h1>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p><img src="https://static.hackaday.io/images/5331751402362645333.png" alt="Arduino Pi logo"></p>
+
+<h1>
 <a name="arduino-pi" class="anchor" href="#arduino-pi"><span class="octicon octicon-link"></span></a>Arduino Pi</h1>
 
 <h1></h1>
@@ -133,14 +127,19 @@ Arduino Uno. Since the Arduino Pi is in its early stages of development (as of J
 <h2>
 <a name="schematic" class="anchor" href="#schematic"><span class="octicon octicon-link"></span></a>Schematic</h2>
 
-<p><iframe width="650" height="448" src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
+<p><img src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" alt=""></p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Arduinopi maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
