--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Arduinopi : Arduino Pi repository" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Arduinopi by iScienceLuvr</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Arduinopi</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/iScienceLuvr/arduinopi">View on GitHub</a>
+      <header>
+        <h1>Arduinopi</h1>
+        <p>Arduino Pi repository</p>
+      </header>
 
-          <h1 id="project_title">Arduinopi</h1>
-          <h2 id="project_tagline">Arduino Pi repository</h2>
+      <div id="banner">
+        <span id="logo"></span>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/iScienceLuvr/arduinopi/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/iScienceLuvr/arduinopi/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <a href="https://github.com/iScienceLuvr/arduinopi" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/iScienceLuvr/arduinopi/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/iScienceLuvr/arduinopi/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <p><img src="https://static.hackaday.io/images/5331751402362645333.png" alt="Arduino Pi logo"></p>
 
 <h1>
@@ -129,17 +137,12 @@ Arduino Uno. Since the Arduino Pi is in its early stages of development (as of J
 
 <p><img src="http://123d.circuits.io/circuits/233178-arduino-pi/embed" alt=""></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Arduinopi maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/iScienceLuvr">iScienceLuvr</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
