--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
 <p>The 5x5 LED matrix is used as a scrolling text display to show the results of the commands.
 For more information about LED matrices and how they are controlled in the Arduino Pi, refer to the Deployment section.</p>
 
-<p>I used the code from the below link and leveraged it for a 5x5 matrix:</p>
+<p>I used the code from the below link:</p>
 
-<p><a href="http://blog.duklabs.com/?p=133">http://blog.duklabs.com/?p=133</a></p>
-
+<p><a href="http://www.instructables.com/id/5X5-dot-matrix-on-Arduino-gets-text-from-pc-2/">http://www.instructables.com/id/5X5-dot-matrix-on-Arduino-gets-text-from-pc-2/</aref></p>
 <h2>
 <a name="bitlash" class="anchor" href="#bitlash"><span class="octicon octicon-link"></span></a>Bitlash</h2>
 
@@ -107,10 +106,9 @@ For more information about LED matrices and how they are controlled in the Ardui
 Arduino Uno. Since the Arduino Pi is in its early stages of development (as of June 4, 2014), when Used with different Arduino boards, the number of free pins vary. For example, an Arduino Pro Mini would not only have 4 free digital pins but also 2 free analog pins.</p>
 
 <h3>
-<a name="using-free-pins" class="anchor" href="#using-free-pins"><span class="octicon octicon-link"></span></a>Using free pins</h3>
+<a name="using-free-I/O-pins" class="anchor" href="#using-free-I/O-pins"><span class="octicon octicon-link"></span></a>Using free I/O pins</h3>
 
-<p>Currently, the only way to use those free pins are by using Bitlash commands. </p>
-
+<p>Due to the setup of Arduino Pi, there are a few free I/O pins. Currently, the only way to use those free pins are by using Bitlash commands. </p>
 <h1>
 <a name="repository" class="anchor" href="#repository"><span class="octicon octicon-link"></span></a>Repository</h1>
 
