--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@ For more information about LED matrices and how they are controlled in the Ardui
 <a name="free-pins" class="anchor" href="#free-pins"><span class="octicon octicon-link"></span></a>Free pins</h2>
 
 <p>Due to the way the Arduino Pi was laid out, there are 4 digital pins that are free to use when used with an 
-Arduino Uno. Since the Arduino Pi is in its early stages of development (as of June 4, 2014), when Used with different Arduino boards, the number of free pins vary. For example, an Arduino Pro Mini would not only have 4 free digital pins but also 2 free analog pins.</p>
+Arduino Uno. Since the Arduino Pi is in its early stages of development (as of June 4, 2014), when used with different Arduino boards, the number of free pins vary. For example, an Arduino Pro Mini would not only have 4 free digital pins but also 2 free analog pins.</p>
 
 <h3>
 <a name="using-free-I/O-pins" class="anchor" href="#using-free-I/O-pins"><span class="octicon octicon-link"></span></a>Using free I/O pins</h3>
 
-<p>Due to the setup of Arduino Pi, there are a few free I/O pins. Currently, the only way to use those free pins are by using Bitlash commands. </p>
+<p>Currently, the only way to use those free pins are by using Bitlash commands. </p>
 <h1>
 <a name="repository" class="anchor" href="#repository"><span class="octicon octicon-link"></span></a>Repository</h1>
 
